0.2.20

2018-06-23  Brecht Sanders  https://github.com/brechtsanders/

  * fixed join_basepath_filename in xlsx_read.c to also support absolute paths (issue reported by Matthew James Briggs)

0.2.19

2018-06-18  Brecht Sanders  https://github.com/brechtsanders/

  * fixed crash in xlsx_read.c when XML_Char_openzip is called with empty filename (crash reported by Matthew James Briggs)
  
2018-05-17  Brecht Sanders  https://github.com/brechtsanders/

  * fixed memory allocation issue when using minizip version of xlsx_read

0.2.18

2018-04-27  Brecht Sanders  https://github.com/brechtsanders/

  * fixed formatting issue with cell coordinates
  
0.2.17

2018-03-22  Brecht Sanders  https://github.com/brechtsanders/

  * fixed crash when trying to write to an existing .xlsx that is locked (e.g. opened in Excel)

0.2.16

2018-03-18  Brecht Sanders  https://github.com/brechtsanders/

  * fixed formatting issue with cell coordinates
  
0.2.15

2018-03-18  Brecht Sanders  https://github.com/brechtsanders/

  * removed "OPTIONAL_LINE_BREAK" from sheet1.xml in libxlsxio_write
  * fixed error when opening generated .xlsx files with Gnumeric (added row and cell coordinate references in sheet1.xml and cellStyleXfs in styles.xml)

0.2.14

2018-03-16  Brecht Sanders  https://github.com/brechtsanders/

  * fixed Makefile issues, now properly builds with WIDE=1
  * added build instructions to README.md
  * added example code to README.md

0.2.13

2018-03-16  Brecht Sanders  https://github.com/brechtsanders/

  * fixed hang on Windows when building release version with MinGW-64 (fixed by using stricmp instead of strcasecmp)
  * added CMake option WITH_WIDE to build UTF-16 library (libxlsxio_readw) - experimental, only tested on Windows

0.2.12

2018-03-15  Brecht Sanders  https://github.com/brechtsanders/

  * added support for minizip and made this the default instead of libzip
  * xlsxioread_open_memory() parameter data is no longer const void* but void* to allow free()