@@ -23,11 +23,12 @@ ENDIF()
 
 # dependancies
 SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
-#IF(ZLIB_DIR)
-#  FIND_PACKAGE(ZLIB REQUIRED NO_DEFAULT_PATH PATHS ${ZLIB_DIR})
-#ELSE()
-  FIND_PACKAGE(ZLIB REQUIRED)
-#ENDIF()
+#   dependancy: zlib (dependancy of libzip/Minizip, should be detected there)
+IF(ZLIB_DIR)
+  SET(ZLIB_ROOT ${ZLIB_DIR})
+ENDIF()
+#FIND_PACKAGE(ZLIB REQUIRED)
+#   dependancy: libzip
 IF(WITH_LIBZIP)
   FIND_PACKAGE(LibZip REQUIRED)
   SET(ANYZIP_INCLUDE_DIRS ${LIBZIP_INCLUDE_DIRS})
@@ -39,18 +40,28 @@ ELSE()
   SET(ANYZIP_LIBRARIES ${MINIZIP_LIBRARIES})
   SET(ANYZIP_DEF USE_MINIZIP)
 ENDIF()
-#IF(EXPAT_DIR)
-#  FIND_PACKAGE(EXPAT REQUIRED NO_DEFAULT_PATH PATHS ${EXPAT_DIR})
-#ELSE()
+#   dependancy: expat
+IF(EXPAT_DIR)
+  #FIND_PACKAGE(EXPAT MODULE REQUIRED NO_DEFAULT_PATH PATHS ${EXPAT_DIR})
+  FIND_PATH(EXPAT_INCLUDE_DIR NAMES expat.h NO_DEFAULT_PATH PATHS ${EXPAT_DIR}/include ${EXPAT_DIR})
+  FIND_LIBRARY(EXPAT_LIBRARIES NAMES expat libexpat NO_DEFAULT_PATH PATHS ${EXPAT_DIR}/lib ${EXPAT_DIR})
+ELSE()
   FIND_PACKAGE(EXPAT REQUIRED)
-#ENDIF()
-IF(WITH_WIDE)
-  FIND_LIBRARY(EXPATW_LIBRARY NAMES expatw)
 ENDIF()
+#   dependancy: expatw (if wide library was requested)
+IF(WITH_WIDE)
+  IF(EXPAT_DIR)
+    FIND_LIBRARY(EXPATW_LIBRARIES NAMES expatw libexpatw NO_DEFAULT_PATH PATHS ${EXPAT_DIR}/lib ${EXPAT_DIR})
+  ELSE()
+    FIND_LIBRARY(EXPATW_LIBRARIES NAMES expatw)
+  ENDIF()
+ENDIF()
+
+# Doxygen
 FIND_PACKAGE(Doxygen)
+OPTION(BUILD_DOCUMENTATION "Create and install API documentation (requires Doxygen)" ${DOXYGEN_FOUND})
 
 # build parameters
-OPTION(BUILD_DOCUMENTATION "Create and install API documentation (requires Doxygen)" ${DOXYGEN_FOUND})
 #SET(CMAKE_CXX_FLAGS "-g -Wall")
 #ADD_SUBDIRECTORY(src)
 
@@ -94,7 +105,7 @@ FOREACH(LINKTYPE ${LINKTYPES})
     SET_TARGET_PROPERTIES(xlsxio_readw_${LINKTYPE} PROPERTIES COMPILE_DEFINITIONS "XML_UNICODE;BUILD_XLSXIO;${ANYZIP_DEF}")
     SET_TARGET_PROPERTIES(xlsxio_readw_${LINKTYPE} PROPERTIES OUTPUT_NAME xlsxio_readw)
     TARGET_INCLUDE_DIRECTORIES(xlsxio_readw_${LINKTYPE} PRIVATE lib)
-    TARGET_LINK_LIBRARIES(xlsxio_readw_${LINKTYPE} ${ANYZIP_LIBRARIES} ${EXPATW_LIBRARY})
+    TARGET_LINK_LIBRARIES(xlsxio_readw_${LINKTYPE} ${ANYZIP_LIBRARIES} ${EXPATW_LIBRARIES})
     SET(ALLTARGETS ${ALLTARGETS} xlsxio_readw_${LINKTYPE})
 
     #ADD_LIBRARY(xlsxio_writew_${LINKTYPE} ${LINKTYPE} lib/xlsxio_write.c)
@@ -162,7 +173,7 @@ IF(BUILD_DOCUMENTATION)
   #)
 ENDIF()
 
-# install definitions
+# installation specifications
 INSTALL(TARGETS ${ALLTARGETS}
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
